# repo2ctx

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  PLAN.md  PROMPT.md  PUBLISHING.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
src/repo2ctx/: __init__.py  budget.py  cli.py  discovery.py  formats.py  graph.py  imports.py  pipeline.py  scoring.py  tokens.py  truncation.py
tests/: test_budget.py  test_cli.py  test_discovery.py  test_formats.py  test_graph.py  test_imports.py  test_pipeline.py  test_scoring.py  test_tokens.py  test_truncation.py
