[project]
name = "repo2ctx"
version = "0.1.0"
description = "Intelligently prepare your codebase as LLM context — not just a file dump."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nicolas Corder", email = "nicolas@go-redrock.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gitpython>=3.1.46",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-rust>=0.24.0",
    "tree-sitter-typescript>=0.23.2",
    "typer>=0.24.1",
]

[project.scripts]
repo2ctx = "repo2ctx.cli:app"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
